2015-01-16  Ola Jeppsson  <ola@adapteva.com>

	* labs/hardware_barrier/src/main.c (int main): Exit with
	failure code on detected failure.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* README.md: Add descriptions for missing directories.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* softcache/basic_math/Makefile: Adjustment of paths and cross
	compiling.
	* softcache/math_example/Makefile: Likewise.
	* softcache/basic_math/.gitignore: New file.
	* softcache/basic_math/build.sh: New file.
	* softcache/basic_math/test.sh: New file.
	* softcache/math_example/.gitignore: New file.
	* softcache/math_example/build.sh: New file.
	* softcache/math_example/test.sh: New file.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* softcache/README.md: New file.
	* softcache/basic_math/Makefile: New file.
	* softcache/basic_math/cachemanager.S: New file.
	* softcache/basic_math/e_math_test.c: New file.
	* softcache/basic_math/fast.ldf: New file.
	* softcache/basic_math/fast_cacheman.ldf: New file.
	* softcache/basic_math/math_test.c: New file.
	* softcache/math_example/Makefile: New file.
	* softcache/math_example/cachemanager.S: New file.
	* softcache/math_example/e_math_example.c: New file.
	* softcache/math_example/fast.ldf: New file.
	* softcache/math_example/fast_cacheman.ldf: New file.
	* softcache/math_example/math_example.c: New file.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* apps/hello-world/src/hello_world.c (int main): Attach to shm
	segment if it already exists, instead of failing

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* apps/hello-world/src/hello_world.c (int main): Print to
	stdout instead of stderr.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* test/e-standby-test/src/e-standby-test.c (int main): Call
	e_reset_system().
	(int my_reset_system): Rename to my_config_system(). Update
	for new ESYS API. Let e_reset_system() handle reset.
	* test/e-standby-test/test.sh: Do not redirect stdout.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>
